# aibi

./: .flake8  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_LLM.md  CONTRIBUTING.md  DIMENSION_MAPPING.md  DIMENSION_MATCHING.md  FRONTEND_SETUP.md  IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION.md  METADATA_API.md  Makefile  PREFIX_PRESERVATION.md  PROJECT_SUMMARY.txt  QUALITY.md  QUERY_SEQUENCES.md  QUICKSTART.md  README.md  SETUP.md  UPGRADE_GUIDE.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: metadata_routes.py  routes.py
app/models/: metadata.py  metadata_schemas.py  schemas.py
app/services/: autocomplete_service.py  dimension_mapping_service.py  dimension_matcher.py  dimension_matcher_config.py  dimension_matcher_utils.py  llm_service.py  metadata_service.py  opensearch_service.py  personalization_service.py  prefix_preserving_service.py  vector_service.py
app/utils/: config.py
examples/: client_example.py  dimension_mapping_example.py  dimension_matching_example.py  llm_integration_example.py  metadata_example.py  prefix_preserving_example.py  query_sequences_example.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Autocomplete.tsx
scripts/: check_dependencies.py  init_data.py  test_api.py  verify_installation.py  verify_llm_integration.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_query_endpoints.py
tests/unit/: test_config.py  test_dimension_mapping_service.py  test_dimension_matcher.py  test_llm_service.py  test_metadata_models.py  test_metadata_schemas.py  test_metadata_service.py  test_prefix_preserving_service.py  test_query_sequences.py  test_schemas.py
